--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ h1, h2, h3, h4, h5, p {
 	padding: 0;
 	margin-bottom: 20px;
 	font-size: 1.7em;
+  overflow-x: scroll;
 }
 #about .info-link {
 	margin-right: 0.8em;
