--- a/styles.css
+++ b/styles.css
@@ -30,13 +30,14 @@ h1, h2, h3, h4, h5, p {
 	list-style: none;
 	padding: 0;
 	margin-bottom: 20px;
-	font-size: 1em;
+  
 }
 #about .info-link {
 	margin-right: 0.8em;
 	cursor: pointer;
 	font-weight: 200;
   color: rgb(31, 168, 88);
+  font-size: min(1.2em, 7vw);
 }
 #about .info-link::after {
 	content: "";
@@ -65,13 +66,13 @@ h1, h2, h3, h4, h5, p {
 }
 
 #about .info-section span {
-	font-size: 0.9em;
+	font-size: min(1.2em, 7vw);
 	color: rgb(31, 168, 88);
 	font-weight: 200;
 }
 #about .info-section p {
 	font-weight: 200;
-	font-size: 1.2em;
+	font-size: min(1.2em, 7vw);
   text-align: center;
 }
 
